--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "brighten-school",
+  "name": "inter-nation",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,18 +9,43 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
+    "axios": "^1.8.4",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
+    "lucide-react": "^0.452.0",
+    "next": "14.2.15",
+    "next-intl": "^3.21.1",
+    "next-themes": "^0.3.0",
+    "openai": "^4.93.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.28"
+    "react-hook-form": "^7.53.0",
+    "react-icons": "^5.3.0",
+    "react-markdown": "^10.1.0",
+    "sonner": "^1.7.4",
+    "tailwind-merge": "^2.5.3",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.15",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.28"
+    "typescript": "^5"
   }
 }
