--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "i18next-resources-to-backend": "^1.2.1",
     "lucide-react": "^0.488.0",
     "mongodb": "^6.16.0",
+    "mongoose": "^8.15.1",
     "next": "15.3.0",
     "next-i18next": "^15.4.2",
     "openai": "^4.93.0",
